--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "adut-website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.10.0",
+    "npm": "10.2.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,17 +13,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
+    "sass": "^1.83.0",
+    "typescript": "^5"
   }
 }
