--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
