--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-select": "^5.10.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
